# pixel-widgets

./: .gitignore  .rustfmt.toml  CHANGELOG.md  Cargo.toml  README.md  TODO.md  declarative-syntax.md  style.md  test_style.mss  test_style.ron
examples/: alchemy.rs  counter.mss  counter.pwss  counter.rs  download.pwss  download.rs  framework.rs  tour.pwss  tour.rs
examples/alchemy/: alchemy.pwss  items.ron  main.rs  recipes.ron
examples/tour/: dummy_window.rs  login_window.rs  main.rs
src/: atlas.rs  bitset.rs  cache.rs  component.rs  component_node.rs  draw.rs  element.rs  event.rs  graphics.rs  layout.rs  lib.rs  loader.rs  macros.rs  model_view.rs  mount.rs  prelude.rs  qtree.rs  sandbox.rs  stylesheet.rs  text.rs  tracker.rs  widget.rs
src/backend/: mod.rs  wgpu.rs  wgpu.wgsl  wgpu_shader.frag  wgpu_shader.frag.spv  wgpu_shader.vert  wgpu_shader.vert.spv  winit.rs
src/element/: button.rs  column.rs  container.rs  input.rs  layers.rs  panel.rs  row.rs  scroll.rs  space.rs  text.rs  toggle.rs  window.rs
src/node/: component_node.rs  mod.rs  widget_node.rs
src/style/: builder.rs  default_font.json  mod.rs  parse.rs  tree.rs
src/stylesheet/: builder.rs  mod.rs  parse.rs  tokenize.rs  tree.rs
src/widget/: button.rs  column.rs  drag_drop.rs  dropdown.rs  dummy.rs  frame.rs  image.rs  input.rs  layers.rs  menu.rs  panel.rs  progress.rs  row.rs  scroll.rs  slider.rs  space.rs  spacer.rs  text.rs  toggle.rs  window.rs
