[package]
name = "pixel-widgets"
version = "0.3.0"
authors = ["Bram Buurlage <brambuurlage@gmail.com>"]
edition = "2018"
readme = "README.md"
description = "Elm inspired UI library styled using images"
license = "MIT"
repository = "https://github.com/Kurble/pixel-widgets"
documentation = "https://docs.rs/pixel-widgets"
keywords = ["gui", "ui", "wgpu", "interface", "widgets"]
categories = ["gui"]

[features]
default = ["clipboard", "winit", "wgpu"]

[dependencies]
rusttype = { version = "0.9", features = ["gpu_cache"] }
image = "0.23"
smallvec = "1"
zerocopy = "0.3"
futures = "0.3"
wgpu = { version = "0.5", optional = true }
winit = { version = "0.22", optional = true }
clipboard = { version = "0.5", optional = true }

[package.metadata.docs.rs]
# NOTE: clipboard feature is causing build failures
no-default-features = true
features = ["wgpu", "winit"]
