[package]
name = "pixel-widgets"
version = "0.5.9"
authors = ["Bram Buurlage <brambuurlage@gmail.com>"]
edition = "2018"
readme = "README.md"
description = "Elm inspired UI library styled using images"
license = "MIT"
repository = "https://github.com/Kurble/pixel-widgets"
documentation = "https://docs.rs/pixel-widgets"
keywords = ["gui", "ui", "wgpu", "interface", "widgets"]
categories = ["gui"]

[features]
default = ["clipboard", "winit", "wgpu"]

[dependencies]
rusttype = { version = "0.9", features = ["gpu_cache"] }
image = "0.23"
smallvec = "1"
zerocopy = "0.3"
futures = "0.3"
wgpu = { version = "0.6", optional = true }
winit = { version = "0.24", optional = true }
clipboard = { version = "0.5", optional = true }
notify = "5.0.0-pre.3"
anyhow = "1"

[dev-dependencies]
tokio = { version = "0.2.22", features = ["full"] }
reqwest = "0.10.7"
ron = "0.6.0"
serde = { version = "1", features = ["derive"] }

[package.metadata.docs.rs]
# NOTE: clipboard feature is causing build failures
no-default-features = true
features = ["wgpu", "winit"]
