[package]
name = "pixel-widgets"
version = "0.10.0"
authors = ["Bram Buurlage <brambuurlage@gmail.com>"]
edition = "2021"
readme = "README.md"
description = "Component based UI library for graphical rust applications"
license = "MIT"
repository = "https://github.com/Kurble/pixel-widgets"
documentation = "https://docs.rs/pixel-widgets"
keywords = ["gui", "ui", "wgpu", "interface", "widgets"]
categories = ["gui"]
resolver = "2"

[features]
default = ["clipboard", "winit", "wgpu"]

[dependencies]
rusttype = { version = "0.9", features = ["gpu_cache"] }
image = "0.23"
smallvec = "1"
zerocopy = "0.3"
futures = "0.3"
wgpu = { version = "0.11", optional = true }
winit = { version = "0.25", optional = true }
clipboard = { version = "0.5", optional = true }
anyhow = "1"

[dev-dependencies]
tokio = { version = "0.2.22", features = ["full"] }
reqwest = "0.10.7"
ron = "0.6.0"
serde = { version = "1", features = ["derive"] }

[package.metadata.docs.rs]
# NOTE: clipboard feature is causing build failures
no-default-features = true
features = ["wgpu", "winit"]
